--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="icon.svg" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, target-densityDpi=device-dpi, minimal-ui' />
     <title>SloWey | Portfolio</title>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body class="light-theme">
