update username instagram

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         @sloweyne <br> I post all my work here. I don't want to link it yet because I want to sort it out a little bit!</p>
                     <h3 class="section-heading">Instagram</h3>
                     <p class="section-text">
-                        @slwz.psd <br>Check out my personal instagram for travel pics and food and stuff.</p>
+                        @slowey.psd <br>Check out my personal instagram for travel pics and food and stuff.</p>
                     <h3 class="section-heading">LinkedIn</h3>
                     <p class="section-text">
                         @sloweyne <br>Career updates and so much more!</p>
